<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.veggies.android.todoList.Popup_Window"
    android:background="#58c5cae9">
    <!--
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/todo_title"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:hint="@string/title"
                    android:layout_marginRight="15sp"
                    android:singleLine="true"
                    android:layout_weight="2"
                    android:backgroundTint="#448AFF"/>

                <ImageButton
                    android:id="@+id/img_btn_audio_record"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:paddingRight="10dp"
                    android:paddingTop="26dp"
                    android:src="@drawable/ic_mic_black_24dp"/>
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/todo_description"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:hint="@string/description"
                android:layout_marginRight="15dp"
                android:background="@null" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completed"
                    android:id="@+id/completed"
                    android:checked="false"
                    android:buttonTint="#448AFF"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="25dp"
                    android:layout_gravity="left"
                    android:layout_weight="2"/>

                <ImageButton
                    android:id="@+id/img_btn_audio_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@android:color/transparent"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/ic_play_arrow_black_24dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tasklist"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/tasklist_spinner"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"/>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/bullet_list"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"/>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/alarm_clock"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/todo_date"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:layout_marginRight="10dp"
                    android:text="@string/edited"
                    android:textIsSelectable="false"
                    android:textColor="@color/black"
                    android:layout_marginBottom="20dp" />

            </LinearLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">
                <Button
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="25dp"
                    android:id="@+id/add_list"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:text="@string/additem"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:theme="@style/RaisedButton"
                    android:background="#3F51B5" />

                <Button
                    android:layout_alignBottom="@+id/add_list"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="25dp"
                    android:id="@+id/delete_list"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:text="@string/deleteitem"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:theme="@style/RaisedButton"
                    android:background="#3F51B5" />
            </RelativeLayout>
        </LinearLayout>
</ScrollView>
